php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #35373 "alias not allowed in this configuration"
Submitted: 2005-11-24 19:00 UTC Modified: 2005-11-30 11:32 UTC
Votes:1
Avg. Score:4.0 ± 0.0
Reproduced:0 of 1 (0.0%)
From: remi at FamilleCollet dot com Assigned: dmitry (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.1.1 OS: HP-UX 11.11
Private report: No CVE-ID: None
 [2005-11-24 19:00 UTC] remi at FamilleCollet dot com
Description:
------------
When compiling php-5.1.0 on HP-UX an error occured on file Zend/zend.c, line 1040 :

#if defined(__GNUC__) && !defined(__INTEL_COMPILER) && !defined(DARWIN)
void zend_error_noreturn(int type, const char *format, ...) __attribute__ ((alias("zend_error"),noreturn));
#endif

This test is true while is should not on HP-UX.

file Zend/zend.h, line 254, use the same test.
It sould be corrected to include the following lines 
#  define ZEND_VM_ALWAYS_INLINE
#  define zend_error_noreturn zend_error

With this correction, PHP 5.1.0RC7 compile and work on HP-UX.




Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-11-25 12:33 UTC] tony2001@php.net
What compiler are you using? Which version?
 [2005-11-25 17:39 UTC] remi at FamilleCollet dot com
Oups, sorry, i forget this very useful information.

I'm using gcc version 4.0.2 (from "The Porting and Archiving Centre for HP-UX")
http://hpux.connect.org.uk/hppd/hpux/Gnu/gcc-4.0.2/
 [2005-11-25 20:42 UTC] sniper@php.net
What was the exact error?
 [2005-11-26 08:57 UTC] remi at FamilleCollet dot com
When runnning "gmake" :

/bin/sh /home/sys/install/php-5.1.0/libtool --silent --preserve-dup-deps --mode=compile gcc  -IZend/ -I/home/sys/install/php-5.1.0/Zend/ -DPHP_ATOM_INC -I/home/sys/install/php-5.1.0/include -I/home/sys/install/php-5.1.0/main -I/home/sys/install/php-5.1.0 -I/usr/local/include/libxml2 -I/usr/local/include -I/home/sys/install/php-5.1.0/ext/date/lib -I/usr/local/include/freetype2 -I/usr/local/imap/include -I/home/sys/install/php-5.1.0/ext/mbstring/oniguruma -I/home/sys/install/php-5.1.0/ext/mbstring/libmbfl -I/home/sys/install/php-5.1.0/ext/mbstring/libmbfl/mbfl -I/opt/mysql/include/mysql -I/oracle/app/oracle/product/8.1.7/rdbms/public -I/oracle/app/oracle/product/8.1.7/rdbms/demo -I/opt/pgsql/include -I/home/sys/install/php-5.1.0/TSRM -I/home/sys/install/php-5.1.0/Zend  -D_XOPEN_SOURCE_EXTENDED  -g -O2  -c /home/sys/install/php-5.1.0/Zend/zend.c -o Zend/zend.lo 
/home/sys/install/php-5.1.0/Zend/zend.c:1039: error: alias definitions not supported in this configuration
gmake: *** [Zend/zend.lo] Error 1
 [2005-11-28 17:26 UTC] sniper@php.net
Assigned to the person responsible for adding this line.. :)
Dmitry, simply adding !defined(HPUX) propably is the quick fix, but isn't there really no other way?

 [2005-11-30 11:32 UTC] dmitry@php.net
Should be fixed in CVS HEAD and PHP_5_1.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 10:00:01 2026 UTC