Fixed bug #35373 (HP-UX "alias not allowed in this configuration")

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@201696 c90b9560-bf6c-de11-be94-00142212c4b1